# Smart-desklamp-based-on-Hi3519-and-Hi3861

./: .gitattributes  BUILD.gn  README.md  gy33t_tcp_server.c  iot_hmac.h  iot_log.c  iot_main.h  yuanyi_bh1750fvi.h  yuanyi_gy33t.h  yuanyi_ws2812b.h
gy33t_tcp_server/: iot_hmac.c  iot_log.h  iot_main.c  iot_profile.c  iot_profile.h  yuanyi_bh1750fvi.c  yuanyi_gy33t.c
posedemo/: posture_iot.c  posture_iot.h  yolov8_pose_nv12.cpp  yolov8_pose_wrapper.cpp  yolov8_pose_wrapper.h
ws2812b_tcp_client/: BUILD.gn  ws2812b_tcp_client.c  yuanyi_ws2812b.c
yolo_rtsp/: Makefile  sample_yolo_rtsp.c
